--- a/plugin.xml
+++ b/plugin.xml
@@ -58,8 +58,8 @@
 				</feature>
 		</config-file>
 
-        <framework src="com.google.firebase:firebase-core:10.+" />
-        <framework src="com.google.firebase:firebase-messaging:10.+" />
+        <framework src="com.google.firebase:firebase-core:10.2.6" />
+        <framework src="com.google.firebase:firebase-messaging:10.2.6" />
 
 		<framework src="src/android/FCMPlugin.gradle" custom="true" type="gradleReference"/>
 
