--- a/src/android/FCMPlugin.gradle
+++ b/src/android/FCMPlugin.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     compile 'com.google.firebase:firebase-core:10.2.6'
 }
+// lalala
 // apply plugin: 'com.google.gms.google-services'
 // class must be used instead of id(string) to be able to apply plugin from non-root gradle file
 apply plugin: com.google.gms.googleservices.GoogleServicesPlugin
